# evunit

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
examples/: uselib.rs
src/: cpu.rs  lib.rs  log.rs  main.rs  memory.rs  mmio.rs  prelude.rs  reg.rs  registers.rs  sym.rs  test.rs
test/: build.sh  test.asm  test.gb  test.sh  test.toml
