[package]
name = "evunit"
version = "1.0.0"
description = "A unit testing program for the Game Boy"
license = "MIT"
homepage = "https://github.com/eievui5/evunit"
repository = "https://github.com/eievui5/evunit"
readme = "README.md"
edition = "2021"

[dependencies]
paste = "1.0.9"
thiserror = "1.0.37"
try-from-discrim = "1.0.0"

# For the binary
clap = { version = "3.2.17", features = ["derive"], optional = true }
toml = { version = "0.5.9", features = ["preserve_order"], optional = true }

[features]
evunit-bin = ["clap", "toml"]

[profile.release]
lto = true

[[bin]]
name = "evunit"
required-features = ["evunit-bin"]
