[package]
name = "evunit"
version = "1.3.3"
description = "A unit testing program for the Game Boy"
license = "MIT"
homepage = "https://github.com/eievui5/evunit"
repository = "https://github.com/eievui5/evunit"
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
gb-cpu-sim = "1.0.0"
gb-sym-file = "1.0.1"
paste = "1.0.9"
thiserror = "1.0.49"
toml = { version = "0.8.1", features = ["preserve_order"] }

[profile.release]
lto = true
